--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ fastapi = "^0.112.2"
 uvicorn = "^0.30.6"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
+httpx = "^0.27.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
