--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -3,10 +3,10 @@ name: Django CI Dev - Local
 on:
   push:
     branches:
-      - dev_test
+      - dev
   pull_request:
     branches:
-      - dev_test
+      - dev
 
 jobs:
   test-local:
