--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Start FastAPI server
       run: |
         export PATH="$HOME/.local/bin:$PATH"
+        cd src/
         nohup poetry run uvicorn src.main:app --host 0.0.0.0 --port 8000 &
         sleep 5  # Aguarda o servidor subir completamente
 
@@ -49,6 +50,7 @@ jobs:
     - name: Test FastAPI with pytest
       run: |
         export PATH="$HOME/.local/bin:$PATH"
+        cd src/
         poetry run pytest
 
     - name: Stop FastAPI server
