--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.10"
 pandas = "^2.2.2"
 fastapi = "^0.112.2"
 uvicorn = "^0.30.6"
+psutil = "^6.0.0"
+cloudscraper = "^1.2.71"
+bs4 = "^0.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
