ci: add teste app_mercado_livre

--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -54,3 +54,7 @@ jobs:
     - name: Stop FastAPI server
       run: |
         pkill -f "uvicorn"
+
+    - name: Test mercado_livre_app
+      run: |
+        poetry run python ./src/ws_mercado_livre/app.py
