--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
   #     - "8000:8000"
   
   app_mercado_livre:
+    image: app_mercado_livre:latest
     build:
       context: .
       dockerfile: docker/ws_mercado_livre/Dockerfile
