--- a/docker/ws_mercado_livre/Dockerfile
+++ b/docker/ws_mercado_livre/Dockerfile
@@ -19,3 +19,5 @@ RUN apt-get remove --purge -y \
     && apt-get autoremove -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+CMD ["tail", "-f", "/dev/null"]
