--- a/.github/workflows/test-homolog.yml
+++ b/.github/workflows/test-homolog.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Build and Start Docker Containers
       run: |
-        docker-compose build
+        docker-compose up --build -d
 
     - name: Verify Running Containers
       run: |
