--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: fastapi_app
-  #   environment:
-  #     - PYTHONUNBUFFERED=1
-  #   command: poetry run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-  #   ports:
-  #     - "8000:8000"
+  app_fastapi:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: app_fastapi
+    environment:
+      - PYTHONUNBUFFERED=1
+    command: poetry run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - "8000:8000"
   
   app_mercado_livre:
     image: app_mercado_livre:latest
