--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -28,19 +28,17 @@ jobs:
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
-        export PATH="$HOME/.local/bin:$PATH"
+        echo "export PATH=$HOME/.local/bin:\$PATH" >> $GITHUB_ENV
         poetry --version
     
     - name: Install dependencies with Poetry
       run: |
-        export PATH="$HOME/.local/bin:$PATH"
         poetry install
     
     - name: Start FastAPI server
       run: |
-        export PATH="$HOME/.local/bin:$PATH"
         nohup poetry run uvicorn src.main:app --host 0.0.0.0 --port 8000 &
-        sleep 5  # Aguarda o servidor subir completamente
+        sleep 5
 
     - name: Test FastAPI endpoint
       run: |
@@ -48,13 +46,12 @@ jobs:
 
     - name: Test FastAPI with pytest
       run: |
-        export PATH="$HOME/.local/bin:$PATH"
         poetry run pytest
 
     - name: Stop FastAPI server
       run: |
         pkill -f "uvicorn"
 
-    - name: Test mercado_livre_app
+    - name: Test app_mercado_livre
       run: |
         poetry run python ./src/ws_mercado_livre/app.py
