ci: update repository_dispatch.

--- a/.github/workflows/ci-k8s-cronjob-app-ml.yml
+++ b/.github/workflows/ci-k8s-cronjob-app-ml.yml
@@ -5,10 +5,13 @@ on:
     branches:
       - main
 
-  workflow_run:
-    workflows: ["Django CI Homolog - Docker"]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["Django CI Homolog - Docker"]
+  #   types:
+  #     - completed
+
+  repository_dispatch:
+    types: [ci-k8s-cronjob-app-ml]
 
 jobs:
   test-k8s-locally:
