--- a/.github/workflows/ci-k8s-cronjob-app-ml.yml
+++ b/.github/workflows/ci-k8s-cronjob-app-ml.yml
@@ -5,17 +5,15 @@ on:
     branches:
       - main
 
-  # workflow_run:
-  #   workflows: ["Django CI Homolog - Docker"]
-  #   types:
-  #     - completed
-
-  repository_dispatch:
-    types: [ci-k8s-cronjob-app-ml]
+  workflow_run:
+    workflows: ["Django CI Homolog - Docker"]
+    types:
+      - completed
 
 jobs:
   test-k8s-locally:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment: homolog
     
     steps:
