--- a/.github/workflows/ci-k8s-cronjob-app-ml.yml
+++ b/.github/workflows/ci-k8s-cronjob-app-ml.yml
@@ -20,6 +20,20 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v3
 
+    - name: Download success artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: docker-test-success
+
+    - name: Check if Docker test was successful
+      run: |
+        if grep -q "success" success.txt; then
+          echo "Docker tests passed. Proceeding with Kubernetes deployment...";
+        else
+          echo "Docker tests failed or not found. Exiting.";
+          exit 1;
+        fi
+
     - name: Set up Docker
       uses: docker/setup-buildx-action@v3
       with:
