--- a/.github/workflows/ci-k8s-cronjob-app-ml.yml
+++ b/.github/workflows/ci-k8s-cronjob-app-ml.yml
@@ -14,6 +14,7 @@ jobs:
   test-k8s-locally:
     runs-on: ubuntu-latest
     environment: homolog
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     
     steps:
     - name: Checkout the code
