--- a/.github/workflows/test-homolog.yml
+++ b/.github/workflows/test-homolog.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-
   test-docker:
+    name: Run Django CI Homolog - Docker
     runs-on: ubuntu-latest
     environment: homolog
 
