--- a/.github/workflows/ci-k8s-cronjob-app-ml.yml
+++ b/.github/workflows/ci-k8s-cronjob-app-ml.yml
@@ -18,6 +18,7 @@ jobs:
         check-name: 'Run Django CI Homolog - Docker'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         wait-interval: 10
+        allowed-conclusions: success,skipped,cancelled
 
     - name: Checkout the code
       uses: actions/checkout@v3
