--- a/.github/workflows/ci-k8s-cronjob-app-ml.yml
+++ b/.github/workflows/ci-k8s-cronjob-app-ml.yml
@@ -5,21 +5,18 @@ on:
     branches:
       - main
 
+  workflow_run:
+    workflows: ["Django CI Homolog - Docker"]
+    types:
+      - completed
+
 jobs:
   test-k8s-locally:
     runs-on: ubuntu-latest
     environment: homolog
-
+    if: ${{ github.event.workflow_run.conclusion == 'skipped' }}
+    
     steps:
-    - name: Wait for Django CI Homolog - Docker
-      uses: lewagon/wait-on-check-action@v1.3.4
-      with:
-        ref: ${{ github.ref }}
-        check-name: 'Run Django CI Homolog - Docker'
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        wait-interval: 10
-        allowed-conclusions: success,skipped,cancelled
-
     - name: Checkout the code
       uses: actions/checkout@v3
 
