--- a/.github/workflows/test-homolog.yml
+++ b/.github/workflows/test-homolog.yml
@@ -1,6 +1,15 @@
 name: Django CI Homolog - Docker
 
 on:
+  workflow_call:
+    inputs:
+      config-path:
+        required: true
+        type: string
+    secrets:
+      token:
+        required: true
+
   pull_request:
     branches:
       - main
@@ -11,6 +20,11 @@ jobs:
     environment: homolog
 
     steps:
+    - uses: actions/labeler@v4
+      with:
+        repo-token: ${{ secrets.token }}
+        configuration-path: ${{ inputs.config-path }}
+        
     - uses: actions/checkout@v3
 
     - name: Install Docker Compose
