--- a/docker/ws_mercado_livre/Dockerfile
+++ b/docker/ws_mercado_livre/Dockerfile
@@ -20,4 +20,4 @@ RUN apt-get remove --purge -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-CMD ["tail", "-f", "/dev/null"]
+#CMD ["tail", "-f", "/dev/null"]
