feat: add library.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ uvicorn = "^0.30.6"
 psutil = "^6.0.0"
 cloudscraper = "^1.2.71"
 bs4 = "^0.0.2"
+prometheus-fastapi-instrumentator = "^7.0.0"
+prometheus-client = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
