--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     command: poetry run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     ports:
       - "8000:8000"
+    depends_on:
+      - app_mercado_livre
   
   app_mercado_livre:
     image: app_mercado_livre:latest
@@ -21,12 +23,39 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     command: poetry run python app.py
+    depends_on:
+      - prometheus
+      - pushgateway
 
-  # test:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: fastapi_tests
-  #   environment:
-  #     - PYTHONUNBUFFERED=1
-  #   command: poetry run pytest
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    volumes:
+      - grafana_data:/var/lib/grafana
+  
+  pushgateway:
+    image: prom/pushgateway:latest
+    container_name: pushgateway
+    ports:
+      - "9091:9091"
+    depends_on:
+      - prometheus
+
+volumes:
+  grafana_data:
+  prometheus_data:
