--- a/.github/workflows/ci-homolog-k8s-cronjob-app-ml.yml
+++ b/.github/workflows/ci-homolog-k8s-cronjob-app-ml.yml
@@ -18,9 +18,13 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y docker-compose
 
-    - name: Build and Start Docker Containers
+    # - name: Build and Start Docker Containers
+    #   run: |
+    #     docker-compose up --build -d
+
+    - name: Build and Start Only app_mercado_livre Container
       run: |
-        docker-compose up --build -d
+        docker-compose up --build -d app_mercado_livre
 
     - name: Verify Running Containers
       run: |
