--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,7 @@ services:
 
   app_mercado_livre:
     image: app_mercado_livre:latest
+    mem_limit: 2g
     build:
       context: .
       dockerfile: docker/ws_mercado_livre/Dockerfile
