--- a/.github/workflows/ci-homolog-airflow-dag.yml
+++ b/.github/workflows/ci-homolog-airflow-dag.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test-airflow:
-    runs-on: [self-hosted, X-Large]
+    runs-on: ubuntu-latest
     environment: homolog
 
     services:
