--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,14 +115,14 @@ services:
 
   app_mercado_livre:
     image: app_mercado_livre:latest
-    mem_limit: 8g
+    #mem_limit: 8g
     build:
       context: .
       dockerfile: docker/ws_mercado_livre/Dockerfile
     container_name: app_mercado_livre
     environment:
       - PYTHONUNBUFFERED=1
-    command: poetry run python app.py
+    #command: poetry run python app.py
 
   postgres:
     image: postgres:13
