--- a/.github/workflows/ci-homolog-airflow-dag.yml
+++ b/.github/workflows/ci-homolog-airflow-dag.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: homolog
 
+    env:
+      AIRFLOW_UID: 1000
+      AIRFLOW_PROJ_DIR: ./airflow
+
     services:
       postgres:
         image: postgres:13
