--- a/k8s/base/jobs/cronjob-app-mercado-livre.yaml
+++ b/k8s/base/jobs/cronjob-app-mercado-livre.yaml
@@ -13,4 +13,5 @@ spec:
           - name: app-mercado-livre
             image: jnyjhow/app_mercado_livre:latest
             imagePullPolicy: Always
+            command: ["poetry", "run", "python", "app.py"]
           restartPolicy: OnFailure
