--- a/k8s/helm/airflow-values.yml
+++ b/k8s/helm/airflow-values.yml
@@ -11,26 +11,55 @@ extraSecrets:
     data: |
       webserver-secret-key: T0s1dXpyNXZDOWtYOExQWld6cE1qd2VLS2ZKdnNxMlc=
 
-airflow:
-  extraVolumeMounts:
-    - name: airflow-dags-pv
-      mountPath: /opt/airflow/dags
-    - name: airflow-logs-pv
-      mountPath: /opt/airflow/logs
-    - name: airflow-config-pv
-      mountPath: /opt/airflow/config
-    - name: airflow-plugins-pv
-      mountPath: /opt/airflow/plugins
-  extraVolumes:
-    - name: airflow-dags-pv
-      persistentVolumeClaim:
-        claimName: airflow-dags-pvc
-    - name: airflow-logs-pv
-      persistentVolumeClaim:
-        claimName: airflow-logs-pvc
-    - name: airflow-config-pv
-      persistentVolumeClaim:
-        claimName: airflow-config-pvc
-    - name: airflow-plugins-pv
-      persistentVolumeClaim:
-        claimName: airflow-plugins-pvc
+images:
+  airflow:
+    repository: jnyjhow/app_airflow
+    tag: latest
+
+# airflow:
+#   extraVolumeMounts:
+#     - name: airflow-dags-pv
+#       mountPath: /opt/airflow/dags
+#     - name: airflow-logs-pv
+#       mountPath: /opt/airflow/logs
+#     - name: airflow-config-pv
+#       mountPath: /opt/airflow/config
+#     - name: airflow-plugins-pv
+#       mountPath: /opt/airflow/plugins
+#   extraVolumes:
+#     - name: airflow-dags-pv
+#       persistentVolumeClaim:
+#         claimName: airflow-dags-pvc
+#     - name: airflow-logs-pv
+#       persistentVolumeClaim:
+#         claimName: airflow-logs-pvc
+#     - name: airflow-config-pv
+#       persistentVolumeClaim:
+#         claimName: airflow-config-pvc
+#     - name: airflow-plugins-pv
+#       persistentVolumeClaim:
+#         claimName: airflow-plugins-pvc
+
+# extraVolumes:
+#   - name: dags
+#     hostPath:
+#       path: /airflow/dags
+#   - name: logs
+#     hostPath:
+#       path: /airflow/logs
+#   - name: config
+#     hostPath:
+#       path: /airflow/config
+#   - name: plugins
+#     hostPath:
+#       path: /airflow/plugins
+
+# extraVolumeMounts:
+#   - name: dags
+#     mountPath: /opt/airflow/dags
+#   - name: logs
+#     mountPath: /opt/airflow/logs
+#   - name: config
+#     mountPath: /opt/airflow/config
+#   - name: plugins
+#     mountPath: /opt/airflow/plugins
