--- a/.github/workflows/ci-homolog-airflow-dag.yml
+++ b/.github/workflows/ci-homolog-airflow-dag.yml
@@ -67,25 +67,6 @@ jobs:
           sleep 30
         shell: bash
 
-      - name: Generate UUID Version
-        id: uuid_version
-        run: echo "::set-output name=uuid::$(uuidgen)"
-
-      - name: Tag and Push Docker Image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
-          DOCKER_IMAGE_NAME: app_airflow
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          IMAGE_NAME="${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}"
-          UUID_VERSION=${{ steps.uuid_version.outputs.uuid }}
-          docker tag ${{ env.DOCKER_IMAGE_NAME }}:latest $IMAGE_NAME:latest
-          docker tag ${{ env.DOCKER_IMAGE_NAME }}:latest $IMAGE_NAME:$UUID_VERSION
-          docker push $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:$UUID_VERSION
-
-      - name: Stop and Remove Containers
+      - name: Stop and clean up Docker Compose
         run: |
           docker-compose down
