--- a/k8s/helm/airflow-values.yml
+++ b/k8s/helm/airflow-values.yml
@@ -13,7 +13,7 @@ extraSecrets:
 
 images:
   airflow:
-    repository: jnyjhow/airflow-webserver
+    repository: jnyjhow/app_airflow
     tag: latest
 
 # airflow:
