ci: update ci mod.

--- a/.github/workflows/ci-homolog-docker-image-airflow.yml
+++ b/.github/workflows/ci-homolog-docker-image-airflow.yml
@@ -11,7 +11,6 @@ jobs:
     environment: homolog
     env:
       DOCKER_IMAGE_NAME: app_airflow
-      DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
 
     steps:
       - name: Checkout the code
@@ -42,7 +41,7 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          IMAGE_NAME="${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}"
+          IMAGE_NAME="${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}"
           UUID_VERSION=${{ steps.uuid_version.outputs.uuid }}
           docker build -f docker/airflow/Dockerfile -t $IMAGE_NAME:latest -t $IMAGE_NAME:$UUID_VERSION .
           docker push $IMAGE_NAME --all-tags
