--- a/.github/workflows/ci-homolog-docker-image-airflow.yml
+++ b/.github/workflows/ci-homolog-docker-image-airflow.yml
@@ -11,6 +11,7 @@ jobs:
     environment: homolog
     env:
       DOCKER_IMAGE_NAME: app_airflow
+      DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
 
     steps:
       - name: Checkout the code
@@ -40,11 +41,16 @@ jobs:
           script: return crypto.randomUUID()
 
       - name: Build and Push Docker Image
-        env:
-            DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
         run: |
           IMAGE_NAME="${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}"
           UUID_VERSION=${{ steps.uuid_version.outputs.uuid }}
+          
+          # Verify UUID_VERSION is not empty
+          if [ -z "$UUID_VERSION" ]; then
+            echo "UUID version is empty!"
+            exit 1
+          fi
+          
           docker build -f docker/airflow/Dockerfile -t $IMAGE_NAME:latest -t $IMAGE_NAME:$UUID_VERSION .
           docker push $IMAGE_NAME --all-tags
 
