k8s: update helm values

--- a/k8s/helm/airflow-values.yml
+++ b/k8s/helm/airflow-values.yml
@@ -11,9 +11,7 @@ extraSecrets:
     data: |
       webserver-secret-key: T0s1dXpyNXZDOWtYOExQWld6cE1qd2VLS2ZKdnNxMlc=
 
-images:
-  airflow:
-    repository: jnyjhow/app_airflow
-    tag: {{ .Values.airflowImageTag | default "latest" }}
-    
-airflowImageTag: "latest"
+# images:
+#   airflow:
+#     repository: jnyjhow/app_airflow
+#     tag: "latest"
