--- a/k8s/base/jobs/cronjob-app-mercado-livre.yaml
+++ b/k8s/base/jobs/cronjob-app-mercado-livre.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app-mercado-livre-cron
 spec:
   #schedule: "0 19 * * *"
-  schedule: "*/10 * * * *"
+  schedule: "* */1 * * *"
   jobTemplate:
     spec:
       template:
