--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,7 @@ services:
       - "8000:8000"
     depends_on:
       - app_mercado_livre
+      - app_amazon
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/ || exit 1"]
       interval: 10s
@@ -123,6 +124,14 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     #command: poetry run python app.py
+  
+  app_amazon:
+    image: app_amazon:latest
+    build:
+      context: .
+      dockerfile: docker/ws_amazon/Dockerfile
+    container_name: app_amazon
+    #command: python app.py
 
   postgres:
     image: postgres:13
