docker/ws_amazon/Dockerfile

--- a/docker/ws_amazon/Dockerfile
+++ b/docker/ws_amazon/Dockerfile
@@ -1,3 +1,17 @@
+FROM python:3.12-slim AS builder
+
+RUN apt-get update && apt-get install -y \
+    curl && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN curl -sSL https://install.python-poetry.org | python3 -
+ENV PATH="/root/.local/bin:$PATH"
+#RUN pip install poetry
+
+WORKDIR /app
+COPY pyproject.toml poetry.lock ./
+RUN poetry export --without-hashes -f requirements.txt --output requirements.txt
+
 FROM selenium/standalone-chrome:latest
 
 USER root
@@ -11,7 +25,8 @@ ENV PATH=/opt/.venv/bin:$PATH
 WORKDIR /app
 RUN pip install --upgrade pip
 
-COPY requirements.txt .
+#COPY requirements.txt .
+COPY --from=builder /app/requirements.txt ./
 RUN pip install -r requirements.txt
 
 COPY ./src/ws_amazon .
