--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -37,7 +37,7 @@ jobs:
     
     - name: Start FastAPI server
       run: |
-        nohup poetry run uvicorn src.main:app --host 0.0.0.0 --port 8000 &
+        nohup poetry run uvicorn src.fast_api.main:app --host 0.0.0.0 --port 8000 &
         sleep 5
 
     - name: Test FastAPI endpoint
