--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -24,6 +24,12 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    
+    - name: Print Working Directory
+      run: pwd
+
+    - name: List Files
+      run: ls -la
 
     - name: Install Poetry
       run: |
