docker/ubuntu/Dockerfile

--- a/docker/ubuntu/Dockerfile
+++ b/docker/ubuntu/Dockerfile
@@ -1,23 +1,35 @@
-FROM ubuntu:22.04
+FROM ubuntu:24.04
 
-USER root
+ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update && \
-    apt-get install -y python3 python3-pip wget unzip curl xvfb
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg \
+    unzip \
+    curl \
+    python3-pip \
+    xvfb \
+    libxi6 \
+    default-jdk \
+    fonts-liberation \
+    libappindicator3-1 \
+    libnss3 \
+    lsb-release \
+    xdg-utils \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN Xvfb :99 & \
-    export DISPLAY=:99
+RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
+RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list'
+RUN apt-get update && apt-get install -y google-chrome-stable && rm -rf /var/lib/apt/lists/*
 
-RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
-    dpkg -i google-chrome-stable_current_amd64.deb || apt-get install -f -y && \
-    rm google-chrome-stable_current_amd64.deb
-
+ENV GOOGLE_CHROME_BIN=/usr/bin/google-chrome
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
 WORKDIR /app
+RUN python3 --version
 
 COPY requirements_test.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt --break-system-packages
 
 COPY ./src/examples/selenium_example.py /app/selenium_example.py
 COPY ./drivers /app/drivers
