docker/selenium_standalone_chrome/Dockerfile

--- a/docker/selenium_standalone_chrome/Dockerfile
+++ b/docker/selenium_standalone_chrome/Dockerfile
@@ -2,12 +2,15 @@ FROM selenium/standalone-chrome:latest
 
 USER root
 
-RUN apt-get update && apt-get install -y python3 python3-pip python3-venv
+RUN apt-get update && apt-get install -y \
+    python3 python3-pip python3-venv \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m venv /opt/.venv
 ENV PATH=/opt/.venv/bin:$PATH
 
 WORKDIR /app
+RUN python3 --version
 RUN pip install --upgrade pip
 
 COPY requirements_test.txt ./requirements.txt
@@ -15,7 +18,7 @@ RUN pip install -r requirements.txt
 # RUN pip install selenium
 # RUN pip install selenium --break-system-packages
 
-COPY ./src/examples/selenium_example.py /app/selenium_example.py
+COPY ./src/examples/selenium_standalone_chrome_example.py /app/selenium_standalone_chrome_example.py
 COPY ./drivers /app/drivers
 RUN chmod 775 -R drivers 
 
